Now caching the userId